# pysap

./: .buildinfo  .gitignore  .readthedocs.yml  .travis.yml  AUTHOR  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  about.html  astro.deconvolution.deconvolve.html  astro.deconvolution.html  astro.deconvolution.linear.html  astro.deconvolution.wavelet_filters.html  astro.denoising.denoise.html  astro.denoising.html  astro.denoising.noise.html  astro.denoising.wavelet.html  astro.html  astro.tests.html  astro.tests.test_denoising.html  citing.html  contributing.html  dependencies.html  develop.txt  environment.yml  etomo.html  etomo.info.html  etomo.operators.fourier.fourier.html  etomo.operators.fourier.html  etomo.operators.fourier.utils.html  etomo.operators.gradient.gradient.html  etomo.operators.gradient.html  etomo.operators.html  etomo.operators.linear.HOTV.html  etomo.operators.linear.base.html  etomo.operators.linear.html  etomo.operators.linear.utils.html  etomo.operators.linear.wavelet.html  (+103 more)
.circleci/: config.yml  test_script.py
.doctrees/: about.doctree  astro.deconvolution.deconvolve.doctree  astro.deconvolution.doctree  astro.deconvolution.linear.doctree  astro.deconvolution.wavelet_filters.doctree  astro.denoising.denoise.doctree  astro.denoising.doctree  astro.denoising.noise.doctree  astro.denoising.wavelet.doctree  astro.doctree  astro.tests.doctree  astro.tests.test_denoising.doctree  citing.doctree  contributing.doctree  dependencies.doctree  etomo.doctree  etomo.info.doctree  etomo.operators.doctree  etomo.operators.fourier.doctree  etomo.operators.fourier.fourier.doctree  etomo.operators.fourier.utils.doctree  etomo.operators.gradient.doctree  etomo.operators.gradient.gradient.doctree  etomo.operators.linear.HOTV.doctree  etomo.operators.linear.base.doctree  etomo.operators.linear.doctree  etomo.operators.linear.utils.doctree  etomo.operators.linear.wavelet.doctree  etomo.operators.radon.doctree  etomo.operators.radon.radon.doctree  etomo.operators.utils.doctree  etomo.optimizers.doctree  etomo.optimizers.forward_backward.doctree  etomo.optimizers.primal_dual.doctree  etomo.optimizers.utils.cost.doctree  etomo.optimizers.utils.doctree  etomo.optimizers.utils.reweight.doctree  etomo.reconstructors.base.doctree  etomo.reconstructors.doctree  etomo.reconstructors.forwardtomo.doctree  (+82 more)
.doctrees/auto_examples/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-.md  installation-issue.md  plugin-review.md
.github/workflows/: cd-build.yml  check-docs.yml  ci-build.yml
_downloads/: cartesian_reconstruction.ipynb  cartesian_reconstruction.py  galaxy_deconvolution.ipynb  galaxy_deconvolution.py  galaxy_denoising.ipynb  galaxy_denoising.py  non_cartesian_reconstruction.ipynb  p_mri_cartesian_reconstruction.ipynb  p_mri_cartesian_reconstruction.py  structure.ipynb  structure.py
_downloads/01552997a36bdd717c3bc454fd7e2d9c/: plot_galaxy_deconvolution.py
_downloads/0ddaf96cb0023dc219e3c8d1ddc0816f/: GPU_NonCartesian_gpuNUFFT_SENSE_DensityCompensation.py
_downloads/3bb6635001c4534f7e600bfc91de3a98/: cartesian_reconstruction_3d.py
_downloads/53e3a922bcd99bffa7def6625b504f02/: SelfCalibrationReconstruction_Cartesian.ipynb
_downloads/73b8e02bb6f33caf2862e21314c0ecab/: non_cartesian_reconstruction.py
_downloads/7be87163136ef982b708e6d880202904/: cartesian_reconstruction_auto_threshold.py
_downloads/7fe2d640cd96dcf64b430a56164f8f75/: plot_basics.ipynb
_downloads/8ab47f0728e4e62b585adb36bdf5aabe/: SelfCalibrationReconstruction_Cartesian.py
_downloads/8cda8edcd844e5ae580c6ec801f9894f/: plot_galaxy_deconvolution.ipynb
_downloads/9138f71a4096d28f257254c6ca85d02d/: gridsearch_launch.ipynb
_downloads/97bfcadc514fffa31d48224da17b971c/: cartesian_reconstruction.py
_downloads/a61790f0e94be57b1eadf430a1cdc3f1/: CalibrationlessReconstruction_GL_Cartesian.py
_downloads/a7ebfa65f7efc6ac64266edcaede7f62/: non_cartesian_reconstruction.ipynb
_modules/: index.html
_sources/: astro.deconvolution.deconvolve.rst.txt  astro.deconvolution.linear.rst.txt  astro.deconvolution.rst.txt  astro.deconvolution.wavelet_filters.rst.txt  astro.denoising.denoise.rst.txt  astro.denoising.noise.rst.txt  astro.denoising.rst.txt  astro.denoising.wavelet.rst.txt  astro.rst.txt  astro.tests.rst.txt  astro.tests.test_denoising.rst.txt  dependencies.rst.txt  etomo.info.rst.txt  etomo.operators.fourier.fourier.rst.txt  etomo.operators.fourier.rst.txt  etomo.operators.fourier.utils.rst.txt  etomo.operators.gradient.gradient.rst.txt  etomo.operators.gradient.rst.txt  etomo.operators.linear.HOTV.rst.txt  etomo.operators.linear.base.rst.txt  etomo.operators.linear.rst.txt  etomo.operators.linear.utils.rst.txt  etomo.operators.linear.wavelet.rst.txt  etomo.operators.radon.radon.rst.txt  etomo.operators.radon.rst.txt  etomo.operators.rst.txt  etomo.operators.utils.rst.txt  etomo.optimizers.forward_backward.rst.txt  etomo.optimizers.primal_dual.rst.txt  etomo.optimizers.rst.txt  etomo.optimizers.utils.cost.rst.txt  etomo.optimizers.utils.reweight.rst.txt  etomo.optimizers.utils.rst.txt  etomo.reconstructors.base.rst.txt  etomo.reconstructors.forwardtomo.rst.txt  etomo.reconstructors.rst.txt  etomo.rst.txt  index.txt  mri.generators.base.rst.txt  mri.generators.cartesian.rst.txt  (+75 more)
_static/: custom.css  jquery.js  nature.css  nature.css~  sidebar.js
auto_examples/: index.html
auto_gallery/: gallery.html  structure.html
binder/: environment.yml
cospy/: __init__.py  configure.py  data.py  info.py  utils.py
doc/: macos_install.rst  requirements.txt
docs/: requirements.txt
examples/: README.txt  structure.py
pisap/: __init__.py  configure.py  data.py  info.py  utils.py
pysap/: __init__.py  configure.py  data.py  info.py  utils.py
singularity/: singularity_recipe.def
sparse2d/python/: CMakeLists.txt  NumPyArrayData.h  deconvolve.hpp  filter.hpp  mr_2d1d.hpp  numpydata.hpp  pysparse.cpp  starlet.hpp  transform.hpp  transform_3D.hpp
sparse2d/python/cmake/Modules/: BuildBoost.cmake  BuildCfitsIO.cmake  BuildSparse2D.cmake
(+464 files in other folders)
