[nosetests]
verbosity=2
nologcapture=0
cover-package=pysap
with-coverage=1
cover-xml=1
with-xunit=1
ignore-files=test_examples.py

[build_sphinx]
source-dir=doc
build-dir=doc/build
all_files=1

[upload_sphinx]
upload-dir=doc/build/html
repository=http://pypi.python.org/pypi

[metadata]
description-file = README.rst
