[build_sphinx]
source-dir=doc
build-dir=doc/build
all_files=1

[upload_sphinx]
upload-dir=doc/build/html
repository=http://pypi.python.org/pypi

[metadata]
description-file = README.rst

[tool:pytest]
testpaths = pysap
addopts =
  --verbose
  --pycodestyle
  --cov=./
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml
